<!DOCTYPE resources [
    <!ENTITY privacyurl "https://techbotbuilder.github.io/macroinvertebrate/privacy">
    ]>

<resources>
    <string name="app_name">Macroinvertebrate Classifier</string>
    <string name="app_version">0.0.1-beta</string>
    <string name="title_version">Beta</string>
    <string name="url_faq">https://techbotbuilder.github.io/macroinvertebrate/faq</string>
    <string name="preference_file_key">com.techbotbuilder.streamteamohio.PREFERENCE_FILE_KEY</string>
    <string name="icon_description">Silhouette of a stonefly in a circle</string>
    <string name="default_model">models/inception_v3.tflite</string>
    <string name="go_to_classifier">Classify</string>
    <string name="go_to_reporter">Create Report (WIP)</string>
    <string name="go_to_options">Options</string>
    <string name="go_to_about">About</string>
    <string name="no_camera">No camera found</string>
    <string name="take_picture">Take Picture</string>
    <string name="took_picture">Picture Taken</string>
    <string name="processing">Processing Picture</string>
    <string name="completed_processing">Classification Complete</string>
    <string name="about_page">About</string>
    <string name="about_1">
        \nMacroinvertebrate Classifier is an image classifier, for offline, in the field.\n
        \nThe classifier has the correct macroinvertebrate 80% of the time in its top 3 predictions.
        (That becomes 88% among the top 5 predictions.)
        \nThe top prediction is correct 60% of the time, so if possible, take multiple images of
          the same specimen and confirm the predictions based on a textual description.
        \n\n
        \nThis app can be used to identify 21 taxa of benthic (freshwater/river) macroinvertebrates:\n
Aquatic worm\n
Black fly\n
Caddisfly\n
Clam/mussel\n
Crane fly\n
Crayfish\n
Damselfly\n
Dobsonfly\n
Dragonfly\n
Gilled snail\n
Leech\n
Lunged snail\n
Mayfly\n
Midge fly\n
Planaria\n
Rat-tailed maggot\n
Riffle beetle\n
Scud\n
Sowbug\n
Stonefly\n
Water penny beetle\n
        \n
    </string>
    <string name="developer_info">
        \nThe (planned) report functionality will generate PDFs for Licking County\'s Stream Team or
        the Ohio Historic River\'s Stream Quality Monitoring (SQM) programs.\n
        \nDeveloped by Maxwell Budd.\n
        \nThis app uses the following Open-source libraries:\n
         - Joda-time\n
         - Glide\n
         - Tensorflow-litej\n
    </string>
    <string name="known_problems">
        No generic beetle larvae category is classified with the image search function (the
        three-group macroinvertebrate tally asks about generic beetles).
    </string>
    <string name="resources">
        More Resources (not associated with this app):\n
        \nhttps://macroinvertebrates.org: online high-res image set with explanations and guides
            to practice identifying macroinvertebrates yourself.\n
        \nhttps://iNaturalist.org: upload images and location to contribute to online nature tracking
            community effort. Others can help you identify. iNat app available from inaturalist.org.\n
        \nhttps://LifeInFreshWater.net: more information on each taxon.\n\n
    </string>
    <string name="load_image_from_file">Choose File</string>
    <string name="classify_files">Classify files</string>
    <string name="choose_new_form">Fill out a new report</string>
    <string name="choose_old_form">Complete/edit an old report</string>
    <string name="form_go">Go</string>
    <string name="no_prior_forms_error">No prior forms found.</string>
    <string name="no_template_forms_error">Error: no form templates found.</string>
    <string name="form_section">Section: </string>
    <string name="file_not_found">FILE NOT FOUND</string>

    <string name="report_save_before_exit">Save before exit?</string>
    <string name="report_confirm_save_new">Save as new report</string>
    <string name="report_confirm_save_overwrite">Overwrite old data</string>
    <string name="report_deny_quit_nosave">Quit without saving</string>
    <string name="report_cancel">Cancel and return to editing form</string>

    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>

    <string name="date_format">mm/dd/yyyy</string>
    <string name="choose_date">Choose a date</string>
    <string name="choose_time">Choose a time</string>

    <string name="warning_rec_max_queue">Warning: queueing additional images may slow your device.</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="pref_models_header">Classification</string>
    <string name="pref_header_about">About</string>

    <!-- Messages Preferences -->
    <string name="models_title">Default model</string>

    <!-- privacy -->
    <string name="privacy_required">Accept privacy to continue using app!</string>
    <string name="privacy_title">Privacy Policy</string>
    <string name="privacy_url">&privacyurl;</string>
    <string name="privacy_intro">If you do not agree to the privacy policy, do not continue to use the app.\n
        \nThe Privacy Policy can be viewed at \n &privacyurl;
    \n(This link can be accessed later from the (About) menu.</string>
    <string name="privacy_open">(Click here to open Privacy Policy in browser)</string>
    <string name="privacy_basic">The app requests the following permissions as needed:\n
          - Camera - to take photos to identify\n
          - File system write - to save these photos\n
          - File system read - to load these photos to identify\n
        \nAll data and files are stored entirely on your device and never collected on our servers.\n
        These terms may be updated as functionality is added to the app. You will be notified of changes
        in a launcher like this one, but the most current privacy policy will always be found at &privacyurl;.
    </string>
    <string name="confirm_privacy">I accept the normal use of my data in this app (Macroinvertebrate
    Classifier) as described by the privacy policy at &privacyurl;.</string>
    <string name="submit_privacy">Accept</string>
    <string name="privacy_please_check">Please click the above checkbox to confirm.</string>
</resources>
